Fixed height of pose component on mobile to account for new footer

--- a/src/styles/_poses.scss
+++ b/src/styles/_poses.scss
@@ -10,7 +10,7 @@ yf-poses {
   max-width: $width-cap;
   margin: 0 auto;
   background: #fff;
-  height: 80vh;
+  height: 75vh;
   display: flex;
   align-items: center;
 
